Fix sidebar invisibly covers the main screen which prevents interaction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 .collapse:not(.show) {
   display: block;
   left: -100vw;
+  height: 0;
 }
 
 
